--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,12 @@ repl-temp-*
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.example
 
 npm-debug.log*
 yarn-debug.log*
