--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "dependencies": {
     "dotenv-webpack": "^1.5.7",
-    "elm-webpack-loader": "^4.4.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.5"
+    "elm-webpack-loader": "^4.3.1",
+    "webpack": "^4.27.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "start": "webpack-dev-server",
