--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "dependencies": {
+    "@webcomponents/custom-elements": "^1.2.1",
     "dotenv-webpack": "^1.5.7",
     "elm-webpack-loader": "^5.0.0",
     "webpack": "^4.27.0",
